--- a/CubePdf/packages.config
+++ b/CubePdf/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AlphaFS" version="2.0.1" targetFramework="net35" />
+  <package id="log4net" version="2.0.7" targetFramework="net35" />
 </packages>
