--- a/CubePdf/CubePdf.csproj
+++ b/CubePdf/CubePdf.csproj
@@ -149,6 +149,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Properties\Resources.ja.resx" />
     <EmbeddedResource Include="VersionDialog.ja.resx">
       <DependentUpon>VersionDialog.cs</DependentUpon>
     </EmbeddedResource>
