--- a/CubePdf/app.config
+++ b/CubePdf/app.config
@@ -1,28 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
-    <supportedRuntime version="v2.0.50727" />
-  </startup>
-
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
-
-  <runtime>
-    <generatePublisherEvidence enabled="false" />
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.7.0" newVersion="2.0.7.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
   
   <log4net>
     <appender name="InfoLogAppender" type="log4net.Appender.RollingFileAppender">
       <param name="RollingStyle" value="Size" />
-      <param name="File" value="${LOCALAPPDATA}\CubeSoft\CubePdf\Log\CubePdf.log" />
+      <param name="File" value="${ProgramData}\CubeSoft\CubePdf\Log\CubePdf.log" />
       <param name="MaximumFileSize" value="100KB" />
       <param name="maxSizeRollBackups" value="10" />
       <param name="AppendToFile" value="True" />
@@ -43,4 +28,13 @@
       <appender-ref ref="InfoLogAppender" />
     </root>
   </log4net>
+
+  <runtime>
+    <generatePublisherEvidence enabled="false" />
+  </runtime>
+
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v2.0.50727" />
+  </startup>
 </configuration>
